# docs/swagger.json
@@ -3,9 +3,22 @@
     "info": {
         "contact": {}
     },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header",
+            "description": "Type \"Bearer\" followed by a space and your JWT token."
+        }
+    },
     "paths": {
         "/api/v1/admin/products": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates a new product with all its details, features, and specs",
                 "consumes": [
                     "application/json"
@@ -40,6 +53,11 @@
         },
         "/api/v1/admin/products/{id}": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates an existing product. Only provided fields will be updated.",
                 "consumes": [
                     "application/json"
@@ -80,6 +98,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Deletes a product. Can perform soft delete or hard delete.",
                 "consumes": [
                     "application/json"
@@ -356,6 +379,11 @@
         },
         "/api/v1/public/logout": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Logs out the authenticated user.\nExample success response: {\"success\": true}\nExample error response: {\"success\": false, \"error\": {\"code\": \"USER_NOT_FOUND\", \"message\": \"User not found\", \"status\": \"Not Found\"}}",
                 "consumes": [
                     "application/json"
